tests/more_annot/more_annot.exp
Error -------------------------------------------------------------------------------------------- client_object.js:3:16

Cannot assign `o.w.z.y` to `a` because string [1] is incompatible with number [2]. [incompatible-type]

   client_object.js:3:16
   3| var a:number = o.w.z.y;
                     ^^^^^^^

References:
   object.js:1:23
   1| const o1 = { x: 0, y: "" };
                            ^^ [1]
   client_object.js:3:7
   3| var a:number = o.w.z.y;
            ^^^^^^ [2]



Found 1 error
